infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: regent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
